Correcion de errores

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -46,118 +46,122 @@
     <main>
         <h2 class="tituloinicial">GENEROS DE PELICULAS</h2>
         <section>
-            <h3 class="tituloinicial" >ACCIÓN:</h3>
+            <h3 class="tituloinicial">ACCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
-                    </h4>
+                    </p>
                 </li>
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="">
                     </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
-                    </h4>
+                    </p>
                 </li>
                 <li>
                     <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg"
                             alt=""></a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
-                    </h4>
+                    </p>
                 </li>
             </ul>
         </section>
         <section>
-            <h3 class="tituloinicial" >CIENCIA FICCIÓN:</h3>
+            <h3 class="tituloinicial">CIENCIA FICCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/suicideSquad.jpg" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
-                    </h4>
+                    </p>
                 </li>
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Venom</a>
-                    </h4>
+                    </p>
                 </li>
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/justiceLeague.png" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
-                    </h4>
+                    </p>
                 </li>
             </ul>
         </section>
         <section>
-            <h3 class="tituloinicial" >FAMILIA:</h3>
+            <h3 class="tituloinicial">FAMILIA:</h3>
             <ul type="none" class="primerasection">
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/avengersEndgame.jpg" alt=""> </a>
-                    <H4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
-                    </H4>
+                    </p>
                 </li>
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/spiderman.png" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
-                    </h4>
+                    </p>
                 </li>
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
                     </a>
-                    <h4 class="tituoloprincipaldepelicula" >
+                    <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
-                    </h4>
+                    </p>
                 </li>
             </ul>
         </section>
         <h2 class="tituloinicial">GENEROS DE SERIES</h2>
-        
         <section>
-            <h3 class="tituloinicial" >ACCIÓN:</h3>
+            <h3 class="tituloinicial">ACCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
-                        <a class="titulopelicula" href="./detail-series.html">Titans</a>
-                    </h4>
-                <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
-                        <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
-                    </h4>
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="">
+                        <p class="tituoloprincipaldepelicula">
+                            <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
+                        </p>
                 </li>
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
-                        <a class="titulopelicula" href="./detail-series.html">Gotham</a>
-                    </h4>
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="">
+                    </a>
+                    <p class="tituoloprincipaldepelicula">
+                        <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
+                    </p>
                 </li>
-            </ul>
-        </section>
-        <section>
-            <h3 class="tituloinicial" >CIENCIA FICCIÓN:</h3>
-            <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
-                        <a class="titulopelicula" href="./detail-series.html">Watchmen</h4>
+                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series/gotham.jpg"
+                            alt=""></a>
+                    <p class="tituoloprincipaldepelicula">
+                        <a class="titulopelicula" href=".">Gotham</a>
+                    </p>
                 </li>
             </ul>
         </section>
         <section>
-            <h3 class="tituloinicial" >CIENCIA FICCIÓN:</h3>
+            <h3 class="tituloinicial">CIENCIA FICCION:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt=""> </a>
-                    <h4 class="tituoloprincipaldepelicula" >
-                        <a class="titulopelicula" href="./detail-series.html">Watchmen</h4>
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="">
+                        <p class="tituoloprincipaldepelicula">
+                            <a class="titulopelicula" href="./detail-series.html">Titans</a>
+                        </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3 class="tituloinicial">FAMILIA:</h3>
+            <ul type="none" class="primerasection">
+                <li>
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
+                        <p class="tituoloprincipaldepelicula">
+                            <a class="titulopelicula" href="./detail-series.html">Loki</a>
+                        </p>
                 </li>
             </ul>
         </section>
@@ -167,7 +171,7 @@
             <ul type="none" class="footer">
                 <li class="nombres">
                     <h4>Roberto Arellano</h4>
-                    <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                    <a class="gmail" href="mailto:rarellanochoque@udesa.edu.ar">rarellanoch@udesa.edu.ar</a>
                 </li>
                 <li class="nombres">
                     <h4>Martiniano Sanchez</h4>
